--- a/styles/style.css
+++ b/styles/style.css
@@ -3,171 +3,109 @@
 }
 
 html {
-  height: 100vh;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  font-family: open sans;
-  color: #10214e;
-}
-
-article {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  width: 50vw;
-  max-width: 25em;
-  min-width: 20em;
-  border-radius: 1rem;
-  background: rgb(155, 76, 23);
-  background: linear-gradient(0deg, rgb(72, 44, 196) 40%, #37a631 100%);
-  box-shadow: 0 0 20px 20px rgba(0,0,0,.1);
-  transition: .25s;
+  height: 30vh;
+  
 }
 
 header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  justify-content: flex-end;
+width: 90%;
+height: 90%;
 }
 
-h1 {
-  margin: 2rem 0 1rem;
-  color: rgba(0,239,255,1);
+body{
+align-items: center;
+justify-content: center;
+min-height: 70vh;
+margin: 0;
+display: flex;
+color: black;
+background-image: repeating-radial-gradient(blue,magenta)
+} 
+
+
+
+img{
+  margin-top: -1.5;
+  margin-left: -1.5;
+}
+
+
+
+.content {
+  max-width: 600px;
+  margin: auto;
+  background: rgb(0, 0, 0);
+  padding: 10px;
+  display: grid;
+  border-radius: 30px;
+}
+
+.card-about {
+  margin-top: 0.01rem;
+  display: grid;
+  grid-auto-flow: column;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 7rem;
+  
+  .value {
+     font-size: 0.6rem;
+  }
+  
+  .label {
+     margin-top: 0.15rem;
+     font-size: 0.75rem;
+     font-weight: 600;
+     color: var(--primary);
+  }
+}
+
+
+
+
+
+.name{
+  margin-top: -3rem;
 }
 
 button {
-  position: absolute;
-  right: 1rem;
-  top: 1rem;
-  width: 2.5rem;
-  height: 2.5rem;
-  padding: .25rem;
-  border: none;
-  border-radius: 50%;
-  background: rgba(0,239,255,1);
-  transform: scale(.8);
-  transition: .25s;
-}
-button:focus {
-  outline: none;
-  background: #202592;
-}
-button:focus svg {
-  stroke: rgba(0,239,255,1);
+  font-family: "helvetica neue", helvetica, sans-serif;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  border: 2px solid rgba(70, 70, 70, 0.6);
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  box-shadow: 1px 1px 2px rgb(0 0 200 / 40%);
+  border-radius: 200px;
+  padding: 10px 10px;
+  cursor: pointer;
+  place-items: right;
 }
 
-svg {
-  position: absolute;
-  top: calc(1.25rem - 12px);
-  left: calc(1.25rem - 12px);
-  stroke: #4e54c8;
-  transition-delay: .25s;
-}
-button svg:nth-of-type(2) {
-  opacity: 0;
-  transition-delay: 0ms;
-}
 
-img {
-  position: relative;
-  top: 2rem;
-  width: 10em;
-  height: auto;
-  border: 5px solid #fff;
-  border-radius: 10em;
-  box-shadow: 0 0 2px 2px rgba(0,0,0,.2);
-  transition: .25s .15s;
-}
 
-dl {
+
+.card { 
+  width: calc(var(--card-size) * 1.586);
+  height: var(--card-size);
+  
+  border-radius: 0.95rem;
+  box-shadow:  0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3);
+  
+  background: rgb(0, 0, 0);
+  
+
+
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas:
-    "html-dd css-dd js-dd"
-    "html-dt css-dt js-dt"
-    ;
-  justify-items: center;
-  align-items: start;
-  width: 100%;
-  margin-top: -3rem;
-  margin-bottom: 0;
-  padding: 5rem 0 3rem;
-  text-align: center;
-  background: rgb(255,255,255);
-}
-
-dt {
-  margin-top: .25rem;
-  padding-top: .25rem;
-  border-top: 1px solid rgba(0,0,0,0.3);
-  font-weight: bold;
-}
-dt:nth-of-type(1) {
-  grid-area: html-dt;
-}
-dt:nth-of-type(2) {
-  grid-area: css-dt;
-  transform: translateY(1rem);
-}
-dt:nth-of-type(3) {
-  grid-area: js-dt;
-}
-
-dd {
-  margin: 0;
-  padding-left: .3rem;
-  transition: .25s .3s;
-}
-dd:nth-of-type(2){  
-  transform: translateY(1rem);
-}
-
-p { 
-  margin: 0;
-}
-
-article > p {
-  width: 100%;
-  margin-top: 0;
-  padding: 3rem 2rem;
-  border-radius: 0 0 1rem 1rem;
-  text-align: center;
-  background: rgba(255,255,255, 0.5);
-}
-
-/* expand content */
-body.expand {
-  font-size: 1.15em;
-}
-
-body.expand article {
-  width: 60vw;
-  max-width: 60vw;
-}
-
-body.expand button svg:first-of-type {
-  opacity: 0;
-  transition-delay: 0ms;
-}
-
-body.expand button svg:nth-of-type(2) {
-  opacity: 1;
-  transition-delay: .25s;
-}
-
-body.expand dd {
-  font-size: 1.75em;
-}
-
-body.expand img {
-  width: 15em;
+  grid-template-columns: 40% auto;
+  color: rgb(255, 255, 255);
+  
+  align-items: center;
+  
+  will-change: transform;
+  transition: transform 0.25s cubic-bezier(0.4, 0.0, 0.2, 1), box-shadow 0.25s cubic-bezier(0.4, 0.0, 0.2, 1);
+  
 }
