Kleine aanpassingen even mijn breakdownschets toegevoegd.

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,10 +32,11 @@ img{
 
 
 .content {
-  max-width: 600px;
+  max-width: 1200px;
+  max-height: 500px;
   margin: auto;
   background: rgb(0, 0, 0);
-  padding: 10px;
+  padding: 30px;
   display: grid;
   border-radius: 30px;
 }
